# fallow

./: .clippy.toml  .dockerignore  .fallowrc.json  .gitignore  .oxlintrc.json  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  ROADMAP.md  SECURITY.md  _typos.toml  action.yml  deny.toml  hawk.toml  package-lock.json  package.json  rust-toolchain.toml  schema.json
.agents/: README.md
crates/api/: Cargo.toml
crates/api/src/: analysis_context.rs  audit_keys.rs  audit_output.rs  dead_code_sarif.rs  duplication_filters.rs  editor.rs  json_output.rs  lib.rs  list_runtime.rs  markdown_output.rs  output_contracts.rs  runtime_json.rs
crates/api/src/runtime/: audit.rs  dead_code.rs  decision_surface.rs  duplication.rs  feature_flags.rs  mod.rs  tests.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: component_engine.rs  component_output.rs  programmatic_commands.rs  real_sources.rs  representative_sources.rs
crates/cli/: AGENTS.md  Cargo.toml
crates/cli/data/rule-pack-templates/: ai-safe-repo.jsonc  clean-architecture.jsonc  next-app-router.jsonc  side-effect-free-domain.jsonc  starter.jsonc
crates/cli/src/: api.rs  architecture_boundaries.rs  audit.rs  audit_base_worktree.rs  audit_brief.rs  audit_cache.rs  audit_decision_surface.rs  audit_focus.rs  audit_keys.rs  audit_output.rs  audit_review_deltas.rs  audit_routing.rs  audit_tests.rs  audit_walkthrough.rs  audit_weakening.rs  base_worktree.rs  baseline.rs  cache_notice.rs  ci.rs  ci_pr_comment_post.rs  ci_template.rs  cli_format.rs  cli_impact.rs  cli_production.rs  cli_report.rs  cli_startup.rs  cli_telemetry.rs  codeowners.rs  combined.rs  config.rs  dupes.rs  explain.rs  flags.rs  guard.rs  impact.rs  init.rs  inspect.rs  lib.rs  list.rs  main.rs  (+13 more)
crates/cli/src/check/: filtering.rs  mod.rs  output.rs  rules.rs
crates/cli/src/combined/: mod.rs  output.rs
crates/cli/src/coverage/: analyze.rs  cloud_client.rs  mod.rs  upload_common.rs  upload_inventory.rs  upload_source_maps.rs  upload_static_findings.rs
crates/cli/src/fix/: catalog.rs  config.rs  deps.rs  enum_helpers.rs  enum_members.rs  exports.rs  io.rs  mod.rs  plan.rs
crates/cli/src/health/: assembly.rs  coverage.rs  coverage_intelligence.rs  mod.rs  react_hooks.rs  scoring.rs  targets.rs
crates/cli/src/health_types/: coverage.rs  finding.rs  grouped.rs  mod.rs  runtime_coverage.rs  scores.rs  targets.rs  trends.rs  vital_signs.rs
crates/cli/src/license/: mod.rs
crates/cli/src/migrate/: knip.rs  knip_fields.rs  mod.rs
crates/cli/src/regression/: baseline.rs  counts.rs  outcome.rs
crates/cli/src/report/: codeclimate.rs  compact.rs  github.rs  github_annotations.rs  github_summary.rs  grouping.rs  json.rs  markdown.rs  mod.rs  sarif.rs  shared.rs  test_helpers.rs
crates/cli/src/rule_pack/: init.rs  list.rs  mod.rs  templates.rs  test.rs
crates/cli/src/setup_hooks/: fallow-gate.sh
crates/cli/src/signal/: windows.rs
crates/cli/tests/: audit_tests.rs  coverage_analyze_tests.rs  dupes_tests.rs  fix_tests.rs  github_format_tests.rs  health_tests.rs  inspect_tests.rs  list_tests.rs  monorepo_report_paths_tests.rs  reconcile_review_tests.rs  rule_pack_tests.rs  runtime_coverage_tests.rs  schema_tests.rs  snapshot_tests.rs  telemetry_tests.rs
crates/cli/tests/snapshots/: dupes_tests__dupes_human_output.snap  snapshot_tests__codeclimate_mixed_severity.snap  snapshot_tests__codeclimate_output.snap  snapshot_tests__compact_output.snap  snapshot_tests__grouped_duplication_json_directory.snap  snapshot_tests__json_circular_deps_only.snap  snapshot_tests__json_duplicate_exports_only.snap  snapshot_tests__json_empty.snap  snapshot_tests__json_health_with_coverage_gaps.snap  snapshot_tests__json_health_with_coverage_intelligence.snap  snapshot_tests__json_health_with_runtime_coverage.snap  snapshot_tests__json_mixed_severity.snap  snapshot_tests__json_multiple_exports_same_file.snap  snapshot_tests__json_output.snap  snapshot_tests__json_re_export_cycles_only.snap  snapshot_tests__json_re_export_variant.snap  snapshot_tests__json_stale_suppression_unknown_kind.snap  snapshot_tests__json_type_only_deps.snap  snapshot_tests__json_unlisted_deps_only.snap  snapshot_tests__json_unresolved_imports_only.snap  snapshot_tests__json_unused_class_members_only.snap  snapshot_tests__json_unused_deps_only.snap  snapshot_tests__json_unused_dev_deps_only.snap  snapshot_tests__json_unused_enum_members_only.snap  snapshot_tests__json_unused_exports_only.snap  snapshot_tests__json_unused_files_only.snap  snapshot_tests__json_unused_optional_deps_only.snap  snapshot_tests__json_unused_types_only.snap  snapshot_tests__json_workspace_deps.snap  (+24 more)
crates/cli/viz-assets/: viz.js
crates/config/: Cargo.toml
crates/config/src/: config_writer.rs  external_plugin.rs
crates/engine/: Cargo.toml
crates/engine/benches/: dupes_detect.rs
crates/engine/src/: baseline.rs  changed_files.rs  churn.rs  core_backend.rs  discover.rs  duplicates.rs  lib.rs  list_inventory.rs  module_graph.rs  plugins.rs  project_config.rs  repo_refs.rs  results.rs  session.rs  source.rs  vital_signs.rs  viz.rs  workspace_scope.rs
crates/extract/: AGENTS.md  Cargo.toml
crates/extract/src/: astro.rs  complexity.rs  css.rs  css_in_js.rs  css_in_js_object.rs  css_metrics.rs  flags.rs  glimmer.rs  graphql.rs  html.rs  lib.rs  mdx.rs  module_info.rs  parse.rs  sfc.rs  sfc_props.rs  source_map.rs  template_complexity.rs  template_usage.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: analysis.rs  code_lens.rs  hover.rs  initialization.rs  lib.rs  main.rs  path_utils.rs  protocol.rs  tests.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: params.rs
crates/multicall/: Cargo.toml
crates/output/: Cargo.toml
crates/output/src/: audit_brief.rs  check.rs  ci_output.rs  diff.rs  health_css.rs  health_report.rs  health_scores.rs  inspect_envelopes.rs  lib.rs  report_contract.rs  sarif.rs  suppressions.rs  walkthrough_render.rs
crates/programmatic-cli/: Cargo.toml
crates/security/: Cargo.toml
crates/security/src/: lib.rs
(+948 files in other folders)
