[package]
name = "fallow-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Programmatic API contract types for fallow"
readme = "../../README.md"

[lib]
doctest = false

[dependencies]
fallow-config = { workspace = true }
fallow-engine = { workspace = true }
fallow-output = { workspace = true }
fallow-types = { workspace = true }
dunce = { workspace = true }
globset = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, optional = true }
xxhash-rust = { workspace = true }

[features]
schema = ["dep:schemars", "fallow-engine/schema", "fallow-output/schema", "fallow-types/schema"]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
