[package]
name = "fallow-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Configuration types and workspace discovery for fallow codebase intelligence"
readme = "../../README.md"

[lib]
doctest = false

[dependencies]
dunce = { workspace = true }
fallow-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
jsonc-parser = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
schemars = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
miette = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
