[package]
name = "fallow-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LSP server for fallow codebase intelligence (diagnostics, code actions, hover, code lens)"
publish = false

[lib]
name = "fallow_lsp"
path = "src/lib.rs"

[[bin]]
name = "fallow-lsp"
path = "src/main.rs"

[dependencies]
dunce = { workspace = true }
fallow-api = { workspace = true }
fallow-config = { workspace = true }
fallow-types = { workspace = true }
ls-types = { workspace = true }
tower-lsp-server = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# `io-util` (duplex pipes, BufReader, AsyncRead/WriteExt) is test-only: the
# `Server::serve` integration test drives the LSP over framed duplex streams.
# The production bin keeps the slimmer workspace tokio feature set.
tokio = { workspace = true, features = ["io-util"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
# Needed by stale-publish tests to drain tower-lsp-server's ClientSocket
# (server-to-client notification stream) and inspect the version slot
# threaded through `publish_diagnostics`. tower-lsp-server itself depends on
# futures = "0.3" for the same purpose; we mirror its feature set so we
# do not pull a duplicate version.
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[lints]
workspace = true
