[package]
name = "fallow-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MCP server for fallow codebase intelligence (exposes fallow as typed tools to AI agents)"
readme = "../../README.md"

[[bin]]
name = "fallow-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "2.0", features = ["transport-io"] }
rquickjs = "0.12"
fallow-api.workspace = true
fallow-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
schemars.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
regex.workspace = true

[lints]
workspace = true
