[package]
name = "fallow-programmatic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Compatibility health runner adapter for fallow embedders"
publish = false
readme = "../../README.md"

[dependencies]
fallow-api = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
