[package]
name = "fallow-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared security catalogue contracts for fallow"
readme = "../../README.md"

[lib]
doctest = false

[dependencies]
fallow-config = { workspace = true }
fallow-types = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
